# smartapp-sdk

./: .coveragerc  .mypy.ini  .pre-commit-config.yaml  Changelog  DEVELOPER.md  PyPI.md  README.md  SECURITY.md  pyproject.toml  run
.github/workflows/: test-suite.yml  tox.yml
.run/commands/: requirements.sh
docs/: conf.py  index.rst  requirements.txt
src/smartapp/: converter.py  dispatcher.py  interface.py  signature.py
src/tests/smartapp/: test_converter.py  test_dispatcher.py  test_interface.py  test_signature.py  testutil.py
src/tests/smartapp/fixtures/live/request/: INSTALL.1.json
src/tests/smartapp/fixtures/samples/: README.md
tests/: test_converter.py  test_dispatcher.py  test_interface.py  test_signature.py
tests/smartapp/: test_converter.py  test_interface.py
tests/smartapp/fixtures/live/: README.md
utils/: requirements.sh  tools.ps1
