[tool.poetry]
name = "smartapp-sdk"
version = "0.0.0" # published version is managed using Git tags (see below)
description = "Framework to build a webhook-based SmartThings SmartApp"
authors = ["Kenneth J. Pronovici <pronovic@ieee.org>"]
license = "Apache-2.0"
readme = "PyPI.md"
homepage = "https://pypi.org/project/smartapp-sdk/"
repository = "https://github.com/pronovic/smartapp-sdk"
include = [
   { path = 'Changelog', format = 'sdist' },
   { path = 'NOTICE', format = 'sdist' },
   { path = 'LICENSE', format = 'sdist' },
   { path = 'README.md', format = 'sdist' },
   { path = 'docs', format = 'sdist' },
   { path = 'tests', format = 'sdist' },
]
packages = [ 
   { include = "smartapp", from = "src" },
]
classifiers=[
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: Apache Software License",
   "Operating System :: OS Independent",
   "Environment :: Console",
   "Intended Audience :: Developers",
   "Natural Language :: English",
   "Topic :: Home Automation",
   "Topic :: Software Development :: Libraries",
   "Development Status :: 4 - Beta",
]

# Published version is managed using Git tags
# We get either the tag (like "0.24.1") or a snapshot-type version (like "0.24.1+3.e8319c4")
# If the plugin is not installed, then the version is always "0.0.0", taken from above
[tool.poetry-dynamic-versioning]
enable = true
pattern = '^[vV](?P<base>\d+\.\d+\.\d+)'  # this extracts the version from our vX.Y.Z tag format
format-jinja = "{% if distance == 0 and not dirty %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"

[tool.poetry.dependencies]
python = ">=3.9,<4"
pendulum = "^2.1.2"
attrs = "^22.2.0"
cattrs = "^22.2.0"
PyYAML = "^6.0"
pycryptodomex = "^3.17"
requests = "^2.28.2"
tenacity = "^8.2.1"
importlib-metadata = { version="^6.0.0", optional=true }
sphinx = { version="^6.1.3", optional=true }
sphinx-autoapi = { version="^2.0.1", optional=true }

[tool.poetry.extras]
docs = [ "importlib-metadata", "sphinx", "sphinx-autoapi" ]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-testdox = "^3.0.1"
coverage = "^6.5.0"
pylint = "^2.16.2"
pre-commit = "^3.1.0"
black = "^23.1.0"
mypy = "^1.0.1"
isort = "^5.12.0"
coveralls = "^3.3.1"
types-PyYAML = "^6.0.12.8"
types-requests = "^2.28.11.15"
colorama = "~0, >=0.4.6"
responses = "^0.22.0"

[tool.black]
line-length = 132
target-version = ['py39', 'py310', 'py311' ]
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | \.poetry
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 132
skip_glob = [ "docs", "notes" ]

[build-system]
requires = ["poetry>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
